--- a/css/relaxr-main.css
+++ b/css/relaxr-main.css
@@ -13,15 +13,27 @@ body {
 }
 
 a {
-	color: #003048;
+	color: #f9e42e;
   text-decoration: none;
 }
 
-a:hover {
-	color: #246C94;
-	text-decoration: underline;
-	border-style:solid;
+.test {
+	color: white;
+	text-decoration: none;
+	border-bottom: 4px solid white;
 }
+
+.tickkline {
+	margin-top: 10px;
+	background: white;
+    width: 80px;
+    height: 20px;
+}
+
+/*a:hover {
+	color: red;
+	
+}*/
 
 img {
 	width: 100%;
@@ -65,9 +77,10 @@ header h1 {
 
 .nav-link {
 	margin-left: 40px;
-	color: #f9e42e;
-	font-size: 1em;
-	font-weight: 300;
+	padding-bottom: 5px;
+/*	color: #f9e42e;*/
+/*	font-size: 1em;
+	font-weight: 300;*/
 }
 
 #logo-area {
